Updated to 1.3.0